# PrototypeEngine

./: .gitignore  CMakeLists.txt  PrototypeEngine.sln  README.md  imgui.ini
Binary/: Monkey0.meshbin  Monkey1.meshbin  Paladin J Nordstrom0.meshbin  Plane0.meshbin  Portal0.meshbin  TestBot0.meshbin  TestBot1.meshbin  TestSpiritBot2.meshbin  TestSpiritBot3.meshbin  TestSpiritBot4.meshbin  Y Bot0.meshbin  goblin_d_shareyko1.meshbin
Launcher/: Launcher.cpp  Launcher.vcxproj
PrototypeEngine/: Actor.cpp  Actor.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  Asteroid.cpp  AudioComponent.cpp  BaseCamera.cpp  BaseCamera.h  BaseScene.cpp  BaseScene.h  BasicInputAction.cpp  BasicInputAction.h  BoneActor.cpp  BoneActor.h  BoxCollider.cpp  BoxCollider.h  BulletActor.cpp  BulletActor.h  Button.cpp  Button.h  CameraActor.cpp  Canvas.cpp  Canvas.h  CapsuleActor.cpp  CapsuleActor.h  CapsuleCollider.cpp  Collision.cpp  Collision.h  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  ConvertNumToString.h  CubeActor.cpp  DebugGrid.cpp  DebugGrid.h  DebugScene01.cpp  DebugScene01.h  (+162 more)
ReferenceFiles/: AudioComponent.h  AudioSystem.cpp  AudioSystem.h  BallActor.cpp  Font.cpp  Font.h  GBuffer.h  OrbitActor.cpp  PointLightComponent.cpp  SoundEventClip.h
Shaders/: Arrow.vert  BasicMesh.vert  GBufferGlobal.frag  GBufferGlobal.vert  GBufferPointLight.frag  GBufferWrite.frag  Grid.frag  Grid.vert  ParticleSprite.frag  Phong.vert  ShadowDepth.frag  ShadowDepth.vert  Skinned.vert  SkinnedShadowDepth.frag  SkinnedShadowDepth.vert  Skybox.frag  Skybox.vert  Sprite.frag  (+1 more)
(+28 files in other folders)
